AI-JADEDEVS4/src/objects/NE_Course_old__c.object
<CustomObject>
    <description>Course</description>
    <fields>
        <fullName>AccessType__c</fullName>
        <label>AccessType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <description>Cost ( Currency )</description>
        <inlineHelpText>Cost</inlineHelpText>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Course_Description__c</fullName>
        <description>Course Description</description>
        <inlineHelpText>Course Description</inlineHelpText>
        <label>Course Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Course_Duration__c</fullName>
        <description>Course Duration</description>
        <label>Course Duration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Id__c</fullName>
        <description>Course Id</description>
        <inlineHelpText>Course Id</inlineHelpText>
        <label>Course Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Modality__c</fullName>
        <description>Course Modality</description>
        <inlineHelpText>Course Modality</inlineHelpText>
        <label>Course Modality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <description>Course Name</description>
        <inlineHelpText>Course Name</inlineHelpText>
        <label>Course Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Status__c</fullName>
        <description>Course Status</description>
        <label>Course Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Type__c</fullName>
        <description>Course Type</description>
        <inlineHelpText>Course Type</inlineHelpText>
        <label>Course Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Hours__c</fullName>
        <description>Credit Hours</description>
        <inlineHelpText>Credit Hours</inlineHelpText>
        <label>Credit Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserTypes__c</fullName>
        <description>UserTypes For Taser</description>
        <label>UserTypes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>NE Course_old</label>
    <nameField>
        <displayFormat>NE-{00000000}</displayFormat>
        <label>NE-Reference_old</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses_old</pluralLabel>
    <recordTypes>
        <fullName>CustomerAccessible</fullName>
        <active>true</active>
        <label>CustomerAccessible</label>
    </recordTypes>
    <recordTypes>
        <fullName>EmployeeAccessible</fullName>
        <active>true</active>
        <label>EmployeeAccessible</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>